--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,2 +1,6 @@
-add_library(shogi_engine engine.cpp)
+add_library(shogi_engine STATIC SHARED
+    engine.cpp
+    kernels.cu
+)
+
 target_include_directories(shogi_engine PUBLIC ../include)
