Board representation and begining of move generation

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,6 +1,23 @@
-add_library(shogi_engine
-    engine.cpp
+set(cudaFiles
+    Bitboard.cu
+    Board.cu
     kernels.cu
+    MoveGen.cu
+)
+
+set(headerFiles
+    Bitboard.h
+    Board.h
+    MoveGen.h
+    Rules.h
+)
+
+set(sourceFiles
+    engine.cpp
+)
+
+add_library(shogi_engine
+    ${cudaFiles} ${headerFiles} ${sourceFiles}
 )
 
 target_include_directories(shogi_engine PUBLIC ../include)
