--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,5 +13,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CUDA_STANDARD 17)
 set(CMAKE_CUDA_STANDARD_REQUIRED ON)
 
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+set(INSTALL_GTEST OFF CACHE BOOL "" FORCE)
+
 add_subdirectory(lib)
 add_subdirectory(app)
+add_subdirectory(tests)
+
+add_subdirectory(external/gtest EXCLUDE_FROM_ALL)
