Board representation and beggining of move generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.22)
 
+set(ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+
 project(
     shogi_engine
     VERSION 0.1
@@ -13,11 +15,14 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CUDA_STANDARD 17)
 set(CMAKE_CUDA_STANDARD_REQUIRED ON)
 
+include_directories(${CMAKE_BINARY_DIR})
+
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 set(INSTALL_GTEST OFF CACHE BOOL "" FORCE)
 
 add_subdirectory(lib)
 add_subdirectory(app)
-add_subdirectory(tests)
+
 
 add_subdirectory(external/gtest EXCLUDE_FROM_ALL)
+add_subdirectory(tests)
