Add dll creation for app

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_executable(shogi_main main.cpp)
 
-target_link_libraries(shogi_main PRIVATE shogi_engine)
+target_link_libraries(shogi_main PRIVATE shogi_engine_core)
+
+target_include_directories(shogi_main PRIVATE core/include)
