--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -6,6 +6,8 @@ set(headerFiles
     engine/Bitboard.h
     engine/Board.h
     engine/BoardVisualization.h
+    include/engine.h
+    engine/game.h
     engine/MoveGen.h
     engine/MoveGenHelpers.h
     engine/Rules.h
@@ -16,23 +18,22 @@ set(sourceFiles
     engine/Bitboard.cpp
     engine/Board.cpp
     engine/engine.cpp
+    engine/game.cpp
     engine/MoveGen.cpp
     engine/MoveGenHelpers.cpp
+
 )
 
 set(dllFiles
-    include/shogi_engine.h
+    ../include/shogi_engine.h
     engine/shogi_engine.cpp
 )
 
-add_library(shogi_engine STATIC
+add_library(shogi_engine_core STATIC
     ${cudaFiles} ${headerFiles} ${sourceFiles}
 )
+target_include_directories(shogi_engine_core PUBLIC include)
 
-add_library(shogi_engine_lib SHARED 
-    ${cudaFiles} ${headerFiles} ${sourceFiles} ${dllFiles}
-)
-
-target_include_directories(shogi_engine PUBLIC ../include)
-
-target_include_directories(shogi_engine_lib PUBLIC include)
+add_library(shogi_engine SHARED ${dllFiles})
+target_link_libraries(shogi_engine PRIVATE shogi_engine_core)
+target_include_directories(shogi_engine PRIVATE ../include)
