--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ include_directories(${CMAKE_BINARY_DIR})
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 set(INSTALL_GTEST OFF CACHE BOOL "" FORCE)
 
-add_subdirectory(lib)
+add_subdirectory(core)
 add_subdirectory(app)
 
 
