Refactor and start of unit testing

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,33 +1,28 @@
 set(headerFiles
-    engine/GameTree.h
-    engine/Bitboard.h
-    engine/Board.h
-    engine/BoardVisualization.h
+    engine/bitboard.h
+    engine/board.h
+    engine/cpuInterface.h
     include/engine.h
     engine/game.h
-    engine/MoveGen.h
-    engine/MoveGenHelpers.h
-    engine/Rules.h
-    engine/Square.h
-    engine/cpuInterface.h
+    engine/gameTree.h
     engine/gpuInterface.h
-    engine/MoveGenerationCPU.h
-    engine/MoveGenerationGPU.h
+    engine/lookUpTables.h
+    engine/moveGen.h
+    engine/moveGenHelpers.h
+    engine/rules.h
+    engine/square.h
 )
 
 set(sourceFiles
-    engine/GameTree.cu
-    engine/Bitboard.cu
-    engine/Board.cu
+    engine/bitboard.cu
+    engine/board.cu
+    engine/cpuInterface.cu
     engine/engine.cu
     engine/game.cu
-    engine/MoveGen.cu
-    engine/MoveGenHelpers.cu
-    engine/kernels.cu
-    engine/cpuInterface.cu
+    engine/moveGen.cu
+    engine/moveGenHelpers.cu
     engine/gpuInterface.cu
-    engine/MoveGenerationCPU.cu
-    engine/MoveGenerationGPU.cu
+    engine/lookUpTables.cu
 )
 
 set(dllFiles
@@ -39,6 +34,8 @@ add_library(shogi_engine_core STATIC
     ${headerFiles} ${sourceFiles}
 )
 target_include_directories(shogi_engine_core PUBLIC include)
+set_target_properties(shogi_engine_core PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+set_target_properties(shogi_engine_core PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
 
 add_library(shogi_engine SHARED ${dllFiles})
 target_link_libraries(shogi_engine PRIVATE shogi_engine_core)
