--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,14 @@ project(
     shogi_engine
     VERSION 0.1
     DESCRIPTION "TODO"
-    LANGUAGES CXX CUDA)
+    LANGUAGES CXX) #CUDA)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(CMAKE_CUDA_STANDARD 17)
-set(CMAKE_CUDA_STANDARD_REQUIRED ON)
+#set(CMAKE_CUDA_STANDARD 17)
+#set(CMAKE_CUDA_STANDARD_REQUIRED ON)
 
 include_directories(${CMAKE_BINARY_DIR})
 
