--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,29 +1,29 @@
 set(headerFiles
-    engine/bitboard.h
-    engine/board.h
+    engine/Bitboard.h
+    engine/Board.h
     engine/CPUsearchHelpers.h
     include/engine.h
     engine/evaluation.h
     engine/game.h
     engine/GPUsearchHelpers.h
     engine/lookUpTables.h
-    engine/moveGen.h
-    engine/moveGenHelpers.h
-    engine/rules.h
+    engine/MoveGen.h
+    engine/MoveGenHelpers.h
+    engine/Rules.h
     engine/search.h
-    engine/square.h
+    engine/Square.h
     engine/USIconverter.h
 )
 
 set(sourceFiles
-    engine/bitboard.cu
-    engine/board.cu
+    engine/Bitboard.cu
+    engine/Board.cu
     engine/CPUsearchHelpers.cu
     engine/engine.cu
     engine/evaluation.cu
     engine/game.cu
-    engine/moveGen.cu
-    engine/moveGenHelpers.cu
+    engine/MoveGen.cu
+    engine/MoveGenHelpers.cu
     engine/GPUsearchHelpers.cu
     engine/lookUpTables.cu
     engine/search.cu
@@ -39,7 +39,7 @@ if(NOT SHOGI_CUDA_SUPPORT)
     set_source_files_properties(${sourceFiles} PROPERTIES LANGUAGE CXX)
 endif()
 
-add_library(shogi_engine_core STATIC ${headerFiles} ${sourceFiles})
+add_library(shogi_engine_core SHARED ${headerFiles} ${sourceFiles})
 target_include_directories(shogi_engine_core PUBLIC include)
 
 if(SHOGI_CUDA_SUPPORT)
