--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -39,18 +39,13 @@ if(NOT SHOGI_CUDA_SUPPORT)
     set_source_files_properties(${sourceFiles} PROPERTIES LANGUAGE CXX)
 endif()
 
-add_library(shogi_engine_core SHARED ${headerFiles} ${sourceFiles})
-add_library(shogi_engine_core_static STATIC ${headerFiles} ${sourceFiles})
-
+add_library(shogi_engine_core STATIC ${headerFiles} ${sourceFiles})
+set_target_properties(shogi_engine_core PROPERTIES POSITION_INDEPENDENT_CODE ON)
 target_include_directories(shogi_engine_core PUBLIC include)
-target_include_directories(shogi_engine_core_static PUBLIC include)
 
 if(SHOGI_CUDA_SUPPORT)
     set_target_properties(shogi_engine_core PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
     set_target_properties(shogi_engine_core PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
-
-    set_target_properties(shogi_engine_core_static PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-    set_target_properties(shogi_engine_core_static PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
 endif()
 
 add_library(shogi_engine SHARED ${dllFiles})
